--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "apollo-link-ws": "1.0.20",
     "aws-amplify": "^4.3.20",
     "axios": "^0.27.2",
+    "cookie-cutter": "^0.2.0",
     "date-fns": "^2.21.1",
     "graphql": "14.6.0",
     "graphql-tag": "^2.12.6",
@@ -36,7 +37,7 @@
     "@types/node": "17.0.31",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "^10.4.5",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.13",
